# GaussianBlur

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kela/gausspicture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hello-jni.cpp  hello-jni.h
app/src/main/java/com/kela/gausspicture/: MainActivity.java
app/src/main/java/com/kela/gausspicture/ndk/: Codec.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/kela/gausspicture/: ExampleUnitTest.java
